README: change Sam's email address.

--- a/README
+++ b/README
@@ -29,6 +29,6 @@ The MBLed project realized in 2011 featuring:
 The original idea and the management of all these projects including
 this one are credited to:
      - Alexis Polti <polti@telecom-paristech.fr>
-     - Samuel Tardieu <tardieu@telecom-paristech.fr>
+     - Samuel Tardieu <sam@rfc1149.net>
 
 Clément Moussu <clement.moussu@gmail.com>
